2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-def.c (info_types_cmd): Accept an optional regexp as
	an argument for .info types.
	(info_var_cmd): Likewise.
	(info_fun_cmd): Likewise.
	(struct pk_info_payload): New type.
	* poke/pk-help.pk: Update help for .info
	{types,variables,functions}.
	* doc/poke.texi (info command): Update doc.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_cast): Allow casts from
	string to string.
	* testsuite/poke.pkl/typeof-10.pk: New test.

2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt-2.pk: Define PK_TYPE_* values.
	(Pk_Type): New struct type.
	* libpoke/pkl-ast.h (PKL_AST_TYPE_S_TYPIFIER): Define.
	* libpoke/pkl-ast.c (pkl_ast_make_struct_type): Initialize the
	struct typifier to NULL.
	* libpoke/pkl-env.h: Prototype for pkl_env_lookup_type and
	pkl_env_lookup_var.
	* libpoke/pkl-env.c (pkl_env_lookup_type): New function.
	(pkl_env_lookup_var): Likewise.
	* libpoke/pkl-ops.def: New unary operator SIZEOF.
	* libpoke/pkl-tab.y: New token TYPEOF.
	(expression): Rule for typeof.
	* libpoke/pkl-lex.l: Handle token TYPEOF.
	* libpoke/pkl-typify.c (pkl_typify1_pr_op_typeof): New handler.
	(pkl_phase_typify1): Register handler.
	* libpoke/pkl-gen.h (PKL_GEN_CTX_IN_TYPIFIER): Define.
	* libpoke/pkl-gen.c (pkl_phase_gen_or_typeof): New handler.
	(pkl_phase_gen): Register handler.
	(pkl_gen_ps_type_integral): Handle IN_TYPIFIER.
	(pkl_gen_pr_type_offset): Likewise.
	(pkl_gen_ps_type_string): Likewise.
	(pkl_gen_pr_type_struct): Likewise.
	(pkl_gen_ps_type_any): Likewise.
	(pkl_gen_pr_type_array): Likewise.
	(pkl_gen_pr_decl): Compile typifier closures for declared struct
	types.
	* libpoke/pkl-gen.pks (integral_typifier): New macro.
	(offset_typifier): Likewise.
	(string_typifier): Likewise.
	(array_typifier): Likewise.
	(common_typifier): Likewise.
	(struct_typifier): New function.