@@ -156,7 +156,9 @@ Show information about some given entities.
 .info functions [REGEXP]
   List information about defined functions.
 .info types [REGEXP]
-  List information about defined types."
+  List information about defined types.
+.info type NAME
+  Print a description of the type with the given name."
   };
 
 pk_help_add_topic
